# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/lite/config/component/lite_component.gni")

static_library("keyword_spotting_sdk") {
  ldflags = [ "-lstdc++" ]
  cflags = [ "-fPIC" ]
  cflags_cc = cflags
  sources = [
    "source/kws_sdk.cpp",
    "source/kws_sdk_impl.cpp",
    "source/pcm_iterator.cpp",
  ]
  include_dirs = [
    "//foundation/ai/ai_engine/interfaces/kits",
    "//foundation/ai/ai_engine/interfaces/kits/asr/keyword_spotting",
    "//foundation/ai/ai_engine/services/client",
    "//foundation/ai/ai_engine/services/client/algorithm_sdk/asr/keyword_spotting/include",
    "//foundation/ai/ai_engine/services/client/client_executor/include",
    "//foundation/ai/ai_engine/services/common",
    "//foundation/ai/ai_engine/services/common/platform/os_wrapper/feature/interfaces",
    "//foundation/ai/ai_engine/services/common/platform/os_wrapper/utils",
    "//foundation/ai/ai_engine/services/common/protocol/plugin_config",
    "//foundation/ai/ai_engine/services/common/protocol/retcode_inner",
    "//foundation/ai/ai_engine/services/common/protocol/struct_definition",
    "//foundation/ai/ai_engine/services/common/utils/constants",
    "//foundation/ai/ai_engine/services/common/utils/encdec/include",
    "//foundation/ai/ai_engine/services/common/utils/log",
  ]
  deps = [
    "//base/hiviewdfx/hilog_lite/frameworks/featured:hilog_shared",
    "//foundation/ai/ai_engine/services/client:ai_client",
    "//foundation/ai/ai_engine/services/common/platform/os_wrapper/feature:audio_features_sdk",
    "//foundation/ai/ai_engine/services/common/platform/os_wrapper/utils:plugin_helper",
    "//foundation/ai/ai_engine/services/common/utils/encdec:encdec",
    "//third_party/bounds_checking_function:libsec_shared",
  ]
  libs = [ "audio_features" ]
}
