# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/lite/config/component/lite_component.gni")

static_library("image_classification_sdk") {
  sources = [
    "source/ic_sdk.cpp",
    "source/ic_sdk_impl.cpp",
  ]
  cflags = [ "-fPIC" ]
  cflags_cc = cflags
  include_dirs = [
    "include",
    "//base/hiviewdfx/hilog_lite/interfaces/native/kits/hilog",
    "//foundation/ai/engine/interfaces",
    "//foundation/ai/engine/interfaces/kits",
    "//foundation/ai/engine/interfaces/kits/cv/image_classification",
    "//foundation/ai/engine/services/common/platform/os_wrapper/utils",
    "//foundation/ai/engine/services/client/client_executor/include",
    "//foundation/ai/engine/services/client",
    "//foundation/ai/engine/services/common",
    "//foundation/ai/engine/services/common/protocol/plugin_config",
    "//foundation/ai/engine/services/common/protocol/struct_definition",
    "//foundation/ai/engine/services/common/protocol/retcode_inner",
    "//foundation/ai/engine/services/common/utils/constants",
    "//foundation/ai/engine/services/common/utils/encdec/include",
    "//foundation/ai/engine/services/common/utils",
    "//third_party/bounds_checking_function/include",
  ]
  deps = [
    "//base/hiviewdfx/hilog_lite/frameworks/featured:hilog_shared",
    "//foundation/ai/engine/services/client:ai_client",
    "//foundation/ai/engine/services/common/platform/os_wrapper/utils:plugin_helper",
    "//foundation/ai/engine/services/common/utils/encdec:encdec",
  ]
}
