# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/lite/config/component/lite_component.gni")

config("libaudio_common_config") {
  include_dirs = [
    "//foundation/ai/engine/interfaces",
    "//foundation/ai/engine/services/common",
    "//foundation/ai/engine/services/common/platform/os_wrapper/audio_loader/include",
    "//foundation/ai/engine/services/common/platform/os_wrapper/audio_loader/include/codec",
    "//foundation/ai/engine/services/common/platform/os_wrapper/utils",
    "//foundation/ai/engine/services/common/platform/utils",
    "//foundation/ai/engine/services/common/protocol/retcode_inner",
    "//foundation/ai/engine/services/common/utils",
    "//foundation/ai/engine/services/common/utils/log",
    "//foundation/multimedia/audio_lite/interfaces/kits",
    "//foundation/multimedia/hals/camera_lite",
    "//foundation/multimedia/utils/lite/hals",
    "//foundation/multimedia/utils/lite/interfaces/kits",
    "//drivers/peripheral/audio/interfaces/include",
    "//drivers/peripheral/codec/interfaces/include",
    "//drivers/peripheral/format/interfaces/include",
    "//third_party/bounds_checking_function/include",
    "//base/hiviewdfx/hilog_lite/interfaces/native/kits/hilog",
  ]
  ldflags = [ "-lstdc++" ]
  ldflags += [ "-lhdi_media" ]
  cflags = [ "-fPIC" ]
  cflags_cc = cflags
}

lite_library("audio_loader") {
  target_type = "static_library"
  sources = [
    "source/audio_utils.cpp",
    "source/audio_wrapper.cpp",
    "source/codec/decoder_wrapper.cpp",
  ]
  public_configs = [ ":libaudio_common_config" ]
  deps = [
    "//device/soc/hisilicon/common/hal/multimedia:libhdi_media",
    "//foundation/multimedia/audio_lite/frameworks:audio_capturer_lite",
    "//foundation/multimedia/utils/lite:media_common",
    "//third_party/bounds_checking_function:libsec_shared",
  ]
}
