# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/lite/config/component/lite_component.gni")

config("os_wrapper_utils_config") {
  include_dirs = [
    "//foundation/ai/engine/interfaces/kits",
    "//foundation/ai/engine/services/common",
    "//foundation/ai/engine/services/common/protocol/retcode_inner",
    "//foundation/ai/engine/services/common/protocol/struct_definition",
    "//foundation/ai/engine/services/common/utils",
    "//foundation/ai/engine/services/common/utils/encdec/include",
    "//foundation/ai/engine/services/platform/os_wrapper/utils",
  ]
}

source_set("plugin_helper") {
  ldflags = [ "-lstdc++" ]
  cflags_cc = [ "-fPIC" ]
  sources = [ "plugin_helper.cpp" ]
  public_configs = [ ":os_wrapper_utils_config" ]
  include_dirs = [
    "//base/hiviewdfx/hilog_lite/interfaces/native/kits/hilog",
    "//third_party/bounds_checking_function/include",
  ]
}
