# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/lite/config/component/lite_component.gni")

copy("engine_nnie_sdk") {
  sources = [
    "$board_name/libnnie_adapter.so",
    "//device/hisilicon/$board_name/sdk_liteos/mpp/lib/libVoiceEngine.so",
    "//device/hisilicon/$board_name/sdk_liteos/mpp/lib/libdnvqe.so",
    "//device/hisilicon/$board_name/sdk_liteos/mpp/lib/libmpi.so",
    "//device/hisilicon/$board_name/sdk_liteos/mpp/lib/libnnie.so",
    "//device/hisilicon/$board_name/sdk_liteos/mpp/lib/libupvqe.so",
  ]
  outputs = [ "$root_out_dir/{{source_file_part}}" ]
}
